[package]
name = "caller"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9.7", features = ["json"] }
ussd = { version = "0.1.0", path = "../ussd" }
